Fix Scrollbar for Linux and word-wrap

--- a/app/assets/stylesheets/flat-ui.css
+++ b/app/assets/stylesheets/flat-ui.css
@@ -6334,41 +6334,3 @@ input.search-query {
 .mal {
   margin-left: 20px;
 }
-
-/* Scrollbar */
-
-.scrollbar
-{
-    margin-left: 30px;
-    float: left;
-  height: 300px;
-  width: 65px;
-  background: #F5F5F5;
-  overflow-y: scroll;
-  margin-bottom: 25px;
-}
-
-.force-overflow {
-  min-height: 450px;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #F5F5F5;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-  background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #AAA;
-  border-radius: 10px;
-}
-
-
-
-
-
