--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -141,6 +141,7 @@
   -moz-border-radius: 6px;
   border-radius: 6px;
   padding: 10px;
+  word-wrap:break-word;
 }
 
 .qest_inner_boddy p {
